--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  overflow: hidden;
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
